2006-01-08  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_autocall): Fix %autocall magic.  Now
	it can be used as a (stateful) toggle, or with a direct parameter.

	* IPython/ultraTB.py (_fixed_getinnerframes): remove debug assert which
	could be triggered in certain cases and cause the traceback
	printer not to work.

2006-01-07  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (_should_recompile): Small fix, closes
	http://www.scipy.net/roundup/ipython/issue48.  Patch by Scott.

2006-01-04  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellGTK.mainloop): fix bug in the GTK
	backend for matplotlib (100% cpu utiliziation).  Thanks to Charlie
	Moad for help with tracking it down.

	* IPython/iplib.py (handle_auto): fix autocall handling for
	objects which support BOTH __getitem__ and __call__ (so that f [x]
	is left alone, instead of becoming f([x]) automatically).

	* IPython/Magic.py (magic_cd): fix crash when cd -b was used.
	Ville's patch.

2006-01-03  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (handle_auto): changed autocall semantics to
	include 'smart' mode, where the autocall transformation is NOT
	applied if there are no arguments on the line.  This allows you to
	just type 'foo' if foo is a callable to see its internal form,
	instead of having it called with no arguments (typically a
	mistake).  The old 'full' autocall still exists: for that, you
	need to set the 'autocall' parameter to 2 in your ipythonrc file.

	* IPython/completer.py (Completer.attr_matches): add
	tab-completion support for Enthoughts' traits.  After a report by
	Arnd and a patch by Prabhu.

2006-01-02  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/ultraTB.py (_fixed_getinnerframes): added Alex
	Schmolck's patch to fix inspect.getinnerframes().

	* IPython/iplib.py (InteractiveShell.__init__): significant fixes
	for embedded instances, regarding handling of namespaces and items